--- a/site/views/ingreso.ejs
+++ b/site/views/ingreso.ejs
@@ -25,7 +25,10 @@
         <input id="email" class="form-control col-12" type="email" name="email" placeholder="Ingresá tu correo" required>
         <span id="errorPassword"></span>
         <input id="password" class="form-control col-12" type="password" name="password" placeholder="Ingresá tu contraseña" required>
-        <button class="btn col-6" type="submit">Ingresar</button><button class="btn col-6 cancelar"><a href="/">Cancelar</a></button>
+        <div class="col-12">
+          <input type="checkbox" name="recordar" id="recordar"><label for="">Recordar sesión</label>
+        </div>
+        <button class="btn col-6" type="submit">Ingresar</button><button class="btn col-6"><a href="/">Cancelar</a></button>
         <h3><a href="/user/registro">¿No tenés cuenta?</a></h3>
       </form>
     </div>
