--- a/site/views/partials/footer.ejs
+++ b/site/views/partials/footer.ejs
@@ -3,13 +3,13 @@
         <div class="col-12 ayuda">
             <h4>Ayuda</h4>
             <p>Si tuviste algún inconveniente, contactanos</p>
-            <button class="btn">Contacto</button>
+            <button class="btn"><a href="https://wa.link/3hzofb" style="color: black;">Contacto</a></button>
         </div>
         <hr class="col-10 separador">
         <div class="col-12 redes">
             <h4>Seguinos en</h4>
             <div class="iconosRedes row">
-                <i class="fab fa-facebook"><br><span> Facebook</span></i>
+                <i class="fab fa-facebook"><br><span><a href="https://www.facebook.com/Insumos-Onboard-106151904680978">Facebook</a> </span></i>
                 <i class="fab fa-twitter"><br><span> Twitter</span></i>
                 <i class="fab fa-instagram"><br><span> Instagram</span></i>
                 <i class="fab fa-youtube"><br><span>Youtube</span></i>
