--- a/site/views/agregar.ejs
+++ b/site/views/agregar.ejs
@@ -11,16 +11,70 @@
     <!-- partial del header -->
     <%- include(`./partials/header.ejs`) %>
 
-    <div class="container-fluid add_prod mt-4">
-        <div class="row row_prod">
-            <div class="col-12">
-                
-                <a href="/prod/add/cat" class="btn col-12">Agregar categoria</a>
-                <a href="/prod/add/prod" class="btn col-12">Agregar producto</a>
-
-            </div>
+    <main class="container-fluid px-0">
+        <div class="bienvenidx row mx-0 py-2 mainCard">
+            <h3 class="col-9 mb-0">Seleccione qué agregar.</h3>
         </div>
-    </div>
+        <div class="row vistaProductos mx-0 py-2 mainCard">
+            <a href="/prod/add/cat" class="btn col-12 seleccion">Agregar categoria</a>
+            <a href="/prod/add/prod" class="btn col-12 seleccion">Agregar producto</a>
+            <a href="/" class="btn col-12 seleccion">Cancelar</a>
+        </div>
+        <div class="row vistaProductos mx-0 py-2 mainCard">
+            <h3 class="col-12">Últimas adiciones</h3>
+
+            <% for (let i = productos.length - 5; i <= productos.length; i++){ %>
+
+            <% if (i < productos.length - 3) { %>
+            <a href=" /prod/det/<%- productos[i].id %>">
+                <div class=" card col-5">
+                    <img src="/img/products/<%- productos[i].imagen%>" class="card-img-top" alt="img producto">
+                    <div class="card-body mx-0 p-0">
+                        <h6 class="card-title"><%- productos[i].marca%> <%- productos[i].modelo%></h6>
+                        <a class="btn">$<%- productos[i].precio%></a>
+                    </div>
+                </div>
+            </a>
+
+            <% } else if (i < productos.length - 2) {%>
+            <a href="/prod/det/<%- productos[i].id %>">
+                <div class="card col-5 movilH d-none">
+                    <img src="/img/products/<%- productos[i].imagen%>" class="card-img-top" alt="img producto">
+                    <div class="card-body mx-0 p-0">
+                        <h6 class="card-title"><%- productos[i].marca%> <%- productos[i].modelo%></h6>
+                        <a class="btn">$<%- productos[i].precio%></a>
+                    </div>
+                </div>
+            </a>
+
+            <% } else if (i < productos.length - 1) {%>
+            <a href="/prod/det/<%- productos[i].id %>">
+                <div class="card col-5 tabletH d-none">
+                    <img src="/img/products/<%- productos[i].imagen%>" class="card-img-top" alt="img producto">
+                    <div class="card-body mx-0 p-0">
+                        <h6 class="card-title"><%- productos[i].marca%> <%- productos[i].modelo%></h6>
+                        <a class="btn">$<%- productos[i].precio%></a>
+                    </div>
+                </div>
+            </a>
+
+            <% } else if (i < productos.length){%>
+            <a href="/prod/det/<%- productos[i].id %>">
+                <div class="card col-5 pAncha d-none">
+                    <img src="/img/products/<%- productos[i].imagen%>" class="card-img-top" alt="img producto">
+                    <div class="card-body mx-0 p-0">
+                        <h6 class="card-title"><%- productos[i].marca%> <%- productos[i].modelo%></h6>
+                        <a class="btn">$<%- productos[i].precio%></a>
+                    </div>
+                </div>
+            </a>
+
+            <% } %>
+            <% } %>
+
+
+        </div>
+    </main>
 
     <!-- partial del footer -->
     <%- include(`./partials/footer.ejs`) %>
