--- a/site/views/index.ejs
+++ b/site/views/index.ejs
@@ -10,7 +10,7 @@
 
     <!-- Cuerpo del home -->
     <main class="container-fluid px-0">
-
+        
         <!-- carousel de novedades -->
         <div id="carruselNovedades" class="carousel slide" data-ride="carousel" data-interval="3000">
             <div class="carousel-inner">
@@ -18,14 +18,14 @@
                     <img src="/img/flyerRTX20s.jpg" class="d-block w-100" alt="flyer rtx">
                     <div class="carousel-caption d-none">
                         <h5>RTX. IT’S ON.</h5>
-                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>Probá la nueva generación!</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="/img/flyerIntel10.jpg" class="d-block w-100" alt="flyer Intel">
                     <div class="carousel-caption d-none">
                         <h5>La potencia de la 10</h5>
-                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>Sentí el poder de la décima generación</p>
                     </div>
                 </div>
                 <div class="carousel-item">
